# fastapi_blog

./: pyproject.toml
backend/: db.slite3  main.py
backend/apis/v1/: route_users.py
backend/apps/v1/: route_blog.py
backend/core/: config.py  repository.py
backend/db/: base.py  session.py
backend/db/models/: users.py
backend/db/repository/: user.py
backend/migrations/: env.py
backend/migrations/versions/: 04eeb48bbae0_initial_commit.py  2024_03_30_1348-67ec5a8fe77b_create_users_table_migrations.py  2024_03_31_1052-c9cd394575c2_add_id_in_base_class.py
backend/schemas/: user.py
backend/templates/: base.html  home.html
