[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["VladMerk <merkvladimir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
aiosqlite = "^0.20.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
bcrypt = "^4.1.2"
passlib = "^1.7.4"
types-passlib = "^1.7.7.20240327"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "W291 E128 E122 F401"

[tool.pytest.ini_options]
addopts = "-sv -p no:cacheprovider"
testpaths = ["tests"]

[tool.isort]
line_length = 100
multi_line_output = 3
